see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

31-Dec-2010 Christophe Demko
 # [#24043] In Chrome, the pagination buttons are misaligned in admin Hathor plus remove duplicate css (Andrea Tarr)
 # [#24018] Alternate date format performing unexpectedly at category view/list layout (bill richardson)
 # [#23895] Correction on the default assets table data in joomla.sql (Sander Potjer)
 # [#23897] Bug in profile edition on admin side (pooja raju)
 # [#23972] Category List does not show non-empty subcategories (bill richardson)

30-Dec-2010 Christophe Demko
 # [#23969] parameter $namespace is obsolete in JRegistry::toString
 # [#23667] Extension Manager: Manage screen does not update version number (Samuel Moffatt)
 # [#23701] joomla.installer.adapters.library does not accomodate media tag (Samuel Moffatt, Michael Richey)
 # [#23808] JToolBar is adding paths in the wrong order (Elin Waring, Ian MacLennan)
 # [#23774] API issue: JUser::save() now uses numeric array for ->groups instead of indexed array ? (Samuel Moffatt)
 # [#23837] *Installation unexpectedly terminated: Method not supported for this extension type: template + (Samuel Moffatt)
 # [#23855] More php strict compatibility fixes (Elin Waring)
 # [#23908] JDocumentHTML::render uses require_once to load template instead of require (Samuel Moffatt)
 # [#23918] the filter 'Hide protected extensions' is selected when all extensions are selected (Rouven Weßling, bill richardson)
 # [#23963] [Patch] Trying to get property of non-object in /modules/mod_login/helper.php on line 54 (Nolan Martin)
 # [#24038] Menu views blanked out in menu item type select modal in Hathor (Andrea Tarr)