@@ -46,7 +46,7 @@ class JFormFieldLanguage extends JFormFieldList
 		// Merge any additional options in the XML definition.
 		$options = array_merge(
 			parent::getOptions(),
-			JLanguageHelper::createLanguageList($this->value, constant('JPATH_'.strtoupper($client)), true)
+			JLanguageHelper::createLanguageList($this->value, constant('JPATH_'.strtoupper($client)), true, true)
 		);
 
 		return $options;
